# blender_probe_for_pycharm

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  build.gradle.kts  gradle.properties  justfile  pyproject.toml  renovate.json  settings.gradle.kts
.github/workflows/: build.yml  docs.yml  release.yml
docs/en/: book.toml
docs/en/src/: SUMMARY.md  configuration.md  creating-a-new-addon-project.md  generating-code-stubs.md  running-and-debugging.md  running-tests.md
docs/ja/: book.toml
docs/ja/src/: SUMMARY.md  configuration.md  creating-a-new-addon-project.md  generating-code-stubs.md  running-and-debugging.md  running-tests.md
src/main/resources/fileTemplates/internal/: BlenderAddon_Ci.yml.ft  BlenderAddon_Gitignore.gitignore.ft  BlenderAddon_Init.py.ft  BlenderAddon_Manifest.toml.ft  BlenderAddon_Ops.py.ft  BlenderAddon_Panel.py.ft  BlenderAddon_Pyproject.toml.ft  BlenderAddon_RunTests.py.ft  BlenderAddon_Test.py.ft
src/main/resources/python/: file_list.txt  generate_stubs.py  probe_server.py  redraw.py  run_tests.py  wheels.py
src/main/resources/python/generator/: analyzer.py  config.py  context.py  core.py  gen_modules.py  gen_ops.py  gen_types.py  template_loader.py  writer.py
src/main/resources/python/templates/core/: class_def.pyi  function.pyi  module_header.pyi  property.pyi  property_readonly.pyi
src/main/resources/python/templates/injections/: BMLoop.pyi  BMVert.pyi  Collection.pyi  Context.pyi  ID.pyi  Object.pyi  (+3 more)
src/test/: test_sample.py
src/test/python/: conftest.py  test_probe_server_reload.py  test_probe_server_wheels.py
(+64 files in other folders)
